--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "backend-remainder",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A backend server for remainder app",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Joshua Nelson",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
