--- a/config/config.json
+++ b/config/config.json
@@ -1,22 +1,22 @@
 {
   "development": {
-    "username": "remainder_development",
+    "username": "joshuanelsondev",
     "password": null,
-    "database": "database_development",
+    "database": "remainder_development",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    "username": "remainder_test",
+    "username": "joshuanelsondev",
     "password": null,
-    "database": "database_test",
+    "database": "remainder_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
-    "username": "remainder_production",
+    "username": "joshuanelsondev",
     "password": null,
-    "database": "database_production",
+    "database": "remainder_production",
     "host": "127.0.0.1",
     "dialect": "postgres"
   }
