--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
   },
   "engines": {
     "node": "18.x"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.15.0",
+    "eslint": "^9.15.0",
+    "globals": "^15.12.0"
   }
 }
