--- a/package.json
+++ b/package.json
@@ -4,8 +4,25 @@
   "description": "A backend server for remainder app",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "NODE_ENV=development node server.js",
+    "start:staging": "NODE_ENV=staging node server.js",
+    "start:prod": "NODE_ENV=production node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "drop": "npx sequelize-cli db:drop",
+    "create": "npx sequelize-cli db:create",
+    "seed": "npx sequelize-cli db:seed:all",
+    "seed:staging": "NODE_ENV=staging npx sequelize-cli db:seed:all",
+    "seed:prod": "NODE_ENV=production npx sequelize-cli db:seed:all",
+    "seed:undo": "npx sequelize-cli db:seed:undo:all",
+    "seed:undo:staging": "NODE_ENV=staging npx sequelize-cli db:seed:undo:all",
+    "seed:undo:prod": "NODE_ENV=production npx sequelize-cli db:seed:undo:all",
+    "migrate": "npx sequelize-cli db:migrate",
+    "migrate:staging": "NODE_ENV=staging npx sequelize-cli db:migrate",
+    "migrate:prod": "NODE_ENV=production npx sequelize-cli db:migrate",
+    "migrate:undo": "npx sequelize-cli db:migrate:undo:all",
+    "migrate:undo:staging": "NODE_ENV=staging npx sequelize-cli db:migrate:undo:all",
+    "migrate:undo:prod": "NODE_ENV=production npx sequelize-cli db:migrate:undo:all"
   },
   "keywords": [],
   "author": "Joshua Nelson",
