--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
   "author": "Joshua Nelson",
   "license": "ISC",
   "dependencies": {
+    "@passwordless-id/webauthn": "^2.1.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5"
