--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
+    "pg-connection-string": "^2.7.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5"
   },
