--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "seed:undo": "npx sequelize-cli db:seed:undo:all",
     "seed:undo:staging": "NODE_ENV=staging npx sequelize-cli db:seed:undo:all",
     "seed:undo:prod": "NODE_ENV=production npx sequelize-cli db:seed:undo:all",
-    "migrate": "npx sequelize-cli db:migrate",
+    "migrate": "NODE_ENV=development npx sequelize-cli db:migrate",
     "migrate:staging": "NODE_ENV=staging npx sequelize-cli db:migrate",
     "migrate:prod": "NODE_ENV=production npx sequelize-cli db:migrate",
     "migrate:undo": "npx sequelize-cli db:migrate:undo:all",
