refactor: update index file, config file, and add scripts for running production environment

--- a/package.json
+++ b/package.json
@@ -7,22 +7,22 @@
     "dev": "nodemon server.js",
     "start": "NODE_ENV=development node server.js",
     "start:staging": "NODE_ENV=staging node server.js",
-    "start:prod": "NODE_ENV=production node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "drop": "npx sequelize-cli db:drop",
-    "create": "npx sequelize-cli db:create",
+    "start:prod": "node scripts/start-prod.js",
     "seed": "npx sequelize-cli db:seed:all",
     "seed:staging": "NODE_ENV=staging npx sequelize-cli db:seed:all",
-    "seed:prod": "NODE_ENV=production npx sequelize-cli db:seed:all",
+    "seed:prod": "node scripts/seed-prod.js",
     "seed:undo": "npx sequelize-cli db:seed:undo:all",
     "seed:undo:staging": "NODE_ENV=staging npx sequelize-cli db:seed:undo:all",
     "seed:undo:prod": "NODE_ENV=production npx sequelize-cli db:seed:undo:all",
     "migrate": "NODE_ENV=development npx sequelize-cli db:migrate",
     "migrate:staging": "NODE_ENV=staging npx sequelize-cli db:migrate",
-    "migrate:prod": "NODE_ENV=production npx sequelize-cli db:migrate",
+    "migrate:prod": "node scripts/migrate-prod.js",
     "migrate:undo": "npx sequelize-cli db:migrate:undo:all",
     "migrate:undo:staging": "NODE_ENV=staging npx sequelize-cli db:migrate:undo:all",
-    "migrate:undo:prod": "NODE_ENV=production npx sequelize-cli db:migrate:undo:all"
+    "migrate:undo:prod": "node scripts/migrate-undo-prod.js",
+    "drop": "npx sequelize-cli db:drop",
+    "create": "npx sequelize-cli db:create",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Joshua Nelson",
