--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "description": "A backend server for remainder app",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "NODE_ENV=development nodemon server.js",
     "start": "NODE_ENV=development node server.js",
     "start:staging": "NODE_ENV=staging node server.js",
-    "start:prod": "node scripts/start-prod.js",
+    "start:prod": "NODE_ENV=production node server.js",
     "seed": "npx sequelize-cli db:seed:all",
     "seed:staging": "NODE_ENV=staging npx sequelize-cli db:seed:all",
-    "seed:prod": "node scripts/seed-prod.js",
+    "seed:prod": "NODE_ENV=production npx sequelize-cli db:seed:all",
     "seed:undo": "npx sequelize-cli db:seed:undo:all",
     "seed:undo:staging": "NODE_ENV=staging npx sequelize-cli db:seed:undo:all",
     "seed:undo:prod": "NODE_ENV=production npx sequelize-cli db:seed:undo:all",
     "migrate": "NODE_ENV=development npx sequelize-cli db:migrate",
     "migrate:staging": "NODE_ENV=staging npx sequelize-cli db:migrate",
-    "migrate:prod": "node scripts/migrate-prod.js",
+    "migrate:prod": "NODE_ENV=production npx sequelize-cli db:migrate",
     "migrate:undo": "npx sequelize-cli db:migrate:undo:all",
     "migrate:undo:staging": "NODE_ENV=staging npx sequelize-cli db:migrate:undo:all",
-    "migrate:undo:prod": "node scripts/migrate-undo-prod.js",
+    "migrate:undo:prod": "NODE_ENV=production npx sequelize-cli db:migrate:undo:all",
     "drop": "npx sequelize-cli db:drop",
     "create": "npx sequelize-cli db:create",
     "test": "echo \"Error: no test specified\" && exit 1"
