--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@passwordless-id/webauthn": "^2.1.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
