--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "start": "NODE_ENV=development node server.js",
     "start:staging": "NODE_ENV=staging node server.js",
     "start:prod": "NODE_ENV=production node server.js",
-    "seed": "npx sequelize-cli db:seed:all",
+    "seed": "NODE_ENV=development npx sequelize-cli db:seed:all",
     "seed:staging": "NODE_ENV=staging npx sequelize-cli db:seed:all",
     "seed:prod": "NODE_ENV=production npx sequelize-cli db:seed:all",
-    "seed:undo": "npx sequelize-cli db:seed:undo:all",
+    "seed:undo": "NODE_ENV=development npx sequelize-cli db:seed:undo:all",
     "seed:undo:staging": "NODE_ENV=staging npx sequelize-cli db:seed:undo:all",
     "seed:undo:prod": "NODE_ENV=production npx sequelize-cli db:seed:undo:all",
     "migrate": "NODE_ENV=development npx sequelize-cli db:migrate",
     "migrate:staging": "NODE_ENV=staging npx sequelize-cli db:migrate",
     "migrate:prod": "NODE_ENV=production npx sequelize-cli db:migrate",
-    "migrate:undo": "npx sequelize-cli db:migrate:undo:all",
+    "migrate:undo": "NODE_ENV=development npx sequelize-cli db:migrate:undo:all",
     "migrate:undo:staging": "NODE_ENV=staging npx sequelize-cli db:migrate:undo:all",
     "migrate:undo:prod": "NODE_ENV=production npx sequelize-cli db:migrate:undo:all",
     "drop": "npx sequelize-cli db:drop",
