--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "NODE_ENV=development nodemon server.js",
-    "start": "NODE_ENV=development node server.js",
+    "start": "node server.js",
     "start:staging": "NODE_ENV=staging node server.js",
     "start:prod": "NODE_ENV=production node server.js",
     "seed": "NODE_ENV=development npx sequelize-cli db:seed:all",
